hphp/hack/test/typecheck/case_type/where_clauses/non_fixed_point_recursion_mutual.php
<?hh

case type NonFixedPointA<T1> =
  | int where int as NonFixedPointB<vec<T1>>;

case type NonFixedPointB<T1> =
  | int where int as NonFixedPointA<vec<T1>>;
